# zai-quota

./: LICENSE  Makefile  README.md  pyproject.toml  zai_quota.py
.github/workflows/: ci.yml  publish.yml
skills/zai-quota/: SKILL.md
skills/zai-quota/scripts/: check_quota.py
